# mccp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PyPi_compliance_checklist.md  README.md  camera_config11.json  camera_settings.json  mccp.toml  mkdocs.yml  pyproject.toml  setup.py
docs/: augmentation.md  cameramanager.md  index.md  utils.md
multicamcomposepro/: augment.py  camera.py  camera_identifier.py  create_warehouse_directories.py  exposure_test  main.py  utils.py
notebooks/: example.ipynb
src/multicamcomposepro/: augment.py  camera.py  camera_identifier.py  gui.py  gui2.py  js_camera.html  main.py  utils.py
tests/: mask_test.py  opencv.py  test_augment.py  test_camera.py  test_identify_camera.py  test_main.py  test_warehouse.py
